src/components/SlidingPane/SlidingPane.scss
@import '~om';

.SlidingPane {
  position: fixed;
  width: 100%;
  bottom: -100vh;
  left: 0;
  right: 0;
  transition: all 500ms ease-out;
  z-index: 1;
  background-color: color(snow);
  margin-left: 0;

  &--active {
    bottom: 0;
  }

  &__top {
    padding: space(3);
    border-bottom: 1px solid color(elephant);
    box-shadow: 0px -1px 2px color(ink, 0.1);
  }

  &__close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 1.2rem;
    cursor: pointer;
  }

  &__content {
    padding: space(4);
  }

  &__overlay {
    background-color: color(coal, 0.3);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    display: none;

    &--active {
      display: block;
    }
  }
}

